// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsBuildQuoteScreen matches snapshot after user edits amount before regional default applies 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-default"
          >
            GBP
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-default"
            >
              25
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="25"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default w-full"
          data-testid="ramps-build-quote-continue"
          role="button"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot redirecting when intent token never settles after load 1`] = `
<div>
  <div
    class="loading-overlay"
  >
    <div
      class="mb-3 loading-overlay__container"
    >
      <div
        class="spinner loading-overlay__spinner"
      >
        <svg
          class="lds-spinner"
          height="100%"
          preserveAspectRatio="xMidYMid"
          style="background: none;"
          viewBox="0 0 100 100"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="rotate(0 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.9166666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(30 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.8333333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(60 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.75s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(90 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.6666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(120 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5833333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(150 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(180 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.4166666666666667s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(210 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.3333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(240 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.25s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(270 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.16666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(300 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.08333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(330 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="0s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="flex-row items-center justify-center flex"
    />
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot redirecting when settled token mismatches intent after load 1`] = `
<div>
  <div
    class="loading-overlay"
  >
    <div
      class="mb-3 loading-overlay__container"
    >
      <div
        class="spinner loading-overlay__spinner"
      >
        <svg
          class="lds-spinner"
          height="100%"
          preserveAspectRatio="xMidYMid"
          style="background: none;"
          viewBox="0 0 100 100"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="rotate(0 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.9166666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(30 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.8333333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(60 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.75s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(90 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.6666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(120 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5833333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(150 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(180 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.4166666666666667s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(210 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.3333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(240 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.25s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(270 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.16666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(300 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.08333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(330 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="0s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="flex-row items-center justify-center flex"
    />
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot when falling back without regional default amount 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default w-full"
          data-testid="ramps-build-quote-continue"
          role="button"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot when quote fetch fails 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-error-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-error-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-error-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <p
        class="text-error-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default mb-4 text-center"
        data-testid="ramps-build-quote-error"
      >
        quote failed
      </p>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          aria-disabled="true"
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 bg-icon-default text-primary-inverse focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default opacity-50 cursor-not-allowed w-full"
          data-testid="ramps-build-quote-continue"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot when quote fetch fails with a technical HTTP error 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-error-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-error-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-error-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <p
        class="text-error-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default mb-4 text-center"
        data-testid="ramps-build-quote-error"
      >
        Failed to fetch quote.
      </p>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          aria-disabled="true"
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 bg-icon-default text-primary-inverse focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default opacity-50 cursor-not-allowed w-full"
          data-testid="ramps-build-quote-continue"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot when quote is available 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default w-full"
          data-testid="ramps-build-quote-continue"
          role="button"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot while quote is loading 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          aria-busy="true"
          aria-disabled="true"
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 opacity-50 text-primary-inverse bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default cursor-not-allowed w-full"
          data-testid="ramps-build-quote-continue"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <span
            aria-hidden="true"
            class="absolute inline-flex items-center gap-x-1"
          >
            <svg
              class="inline-block w-5 h-5 animate-spin text-inherit"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.75 3v3a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 1.5 0m3.492 5.508a.75.75 0 0 0 .53-.22l2.122-2.121a.75.75 0 0 0-1.06-1.061l-2.122 2.121a.75.75 0 0 0 .53 1.28M21 11.25h-3a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5m-4.227 4.463a.75.75 0 0 0-1.06 1.06l2.12 2.121a.75.75 0 0 0 1.061-1.06ZM12 17.25a.75.75 0 0 0-.75.75v3a.75.75 0 0 0 1.5 0v-3a.75.75 0 0 0-.75-.75m-4.773-1.538-2.121 2.121a.75.75 0 0 0 1.06 1.061l2.122-2.121a.75.75 0 0 0-1.06-1.06M6.75 12a.75.75 0 0 0-.75-.75H3a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 .75-.75m-.583-6.894a.75.75 0 0 0-1.061 1.06l2.121 2.122a.75.75 0 0 0 1.06-1.06Z"
              />
            </svg>
            <span
              class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            />
          </span>
          <span
            aria-hidden="true"
            class="invisible inline-flex items-center"
          >
            <span
              class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Continue
            </span>
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Loading
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot while waiting for goToBuy preloaded token to settle 1`] = `
<div>
  <div
    class="loading-overlay"
  >
    <div
      class="mb-3 loading-overlay__container"
    >
      <div
        class="spinner loading-overlay__spinner"
      >
        <svg
          class="lds-spinner"
          height="100%"
          preserveAspectRatio="xMidYMid"
          style="background: none;"
          viewBox="0 0 100 100"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="rotate(0 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.9166666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(30 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.8333333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(60 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.75s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(90 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.6666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(120 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5833333333333334s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(150 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.5s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(180 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.4166666666666667s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(210 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.3333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(240 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.25s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(270 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.16666666666666666s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(300 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="-0.08333333333333333s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
          <g
            transform="rotate(330 50 50)"
          >
            <rect
              fill="var(--color-icon-muted)"
              height="30"
              rx="0"
              ry="0"
              width="10"
              x="45"
              y="0"
            >
              <animate
                attributeName="opacity"
                begin="0s"
                dur="1s"
                repeatCount="indefinite"
                values="1;0"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="flex-row items-center justify-center flex"
    />
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot with provider quote error 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-error-default"
          >
            $
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-error-default"
            >
              100
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-error-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="100"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <p
        class="text-error-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default mb-4 text-center"
        data-testid="ramps-build-quote-error"
      >
        Minimum purchase is $5 USD
      </p>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          aria-disabled="true"
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 bg-icon-default text-primary-inverse focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default opacity-50 cursor-not-allowed w-full"
          data-testid="ramps-build-quote-continue"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RampsBuildQuoteScreen matches snapshot with regional default amount 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-build-quote-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-build-quote-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Buy mUSD
      </p>
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        on Ethereum
      </p>
    </div>
    <div
      class="justify-between flex flex-1 flex-col px-4"
    >
      <div
        class="flex flex-1 flex-col items-center justify-center gap-4"
      >
        <div
          class="flex-row flex items-baseline justify-center"
        >
          <span
            class="text-[56px] font-normal leading-none text-default"
          >
            GBP
          </span>
          <span
            class="relative w-max min-w-[1ch]"
          >
            <span
              aria-hidden="true"
              class="block invisible min-w-[1ch] whitespace-pre text-[56px] font-normal leading-none text-default"
            >
              50
            </span>
            <input
              aria-label="Amount"
              class="absolute inset-0 min-w-[1ch] max-w-full border-0 bg-transparent p-0 text-left outline-none text-[56px] font-normal leading-none text-default"
              data-testid="ramps-build-quote-amount-input"
              inputmode="decimal"
              type="text"
              value="50"
            />
          </span>
        </div>
        <button
          class="justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] inline-flex items-center gap-2 rounded-full bg-background-alternative px-3 py-2 min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-pill"
          role="button"
        >
          <div
            class="flex-row inline-flex items-center gap-2"
          >
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
              />
            </svg>
            <p
              class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
            >
              Debit card
            </p>
            <svg
              class="inline-block w-4 h-4 text-icon-default"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m20.03 9.53-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 15.44l6.97-6.97a.75.75 0 0 1 1.06 1.06"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="flex flex-col gap-3 items-center pb-4"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          data-testid="ramps-build-quote-provider-label"
        >
          Buying via Transak.
        </p>
        <button
          class="inline-flex items-center justify-center rounded-xl px-4 font-medium overflow-hidden relative h-12 transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] bg-icon-default text-primary-inverse hover:bg-icon-default-hover active:bg-icon-default-pressed focus-visible:ring-0 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default w-full"
          data-testid="ramps-build-quote-continue"
          role="button"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
